--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fullpage": "^0.1.19",
     "react-scripts": "4.0.3",
     "uuid": "^3.4.0",
     "web-vitals": "^1.0.1"
